<resources>
    <string name="app_name">JikanMAL_13536</string>
    <string name="app_version">v0.99-BetA_Test!</string>
    <string name="app_author">Basilius Bias Astho Christyono</string>
    <string name="partner">+ Jikan MyAnimeList API"</string>

    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_detail">Anime Detail</string>
    <string name="title_activity_about">About Me!</string>
    <string name="title_activity_login">Please Login!</string>

    <string name="splash_login_info">Hai, Silahkan Login Terlebih Dahulu! ^_^.~</string>
    <string name="register_info">Ayo, Daftar Sekarang! ^_^.~</string>
    <string name="about_library_list">Daftar Library Yang Digunakan</string>

    <string name="txtUser">Nama Pengguna</string>
    <string name="txtPass">Kata Sandi</string>
    <string name="txtPassReg">Buat Kata Sandi</string>
    <string name="txtRePassReg">Ketik Ulang Kata Sandi</string>
    <string name="btnLogin">Masuk</string>
    <string name="btnRegister">Daftar</string>

    <string name="action_menu_linkedin">LinkedIn</string>
    <string name="action_menu_github">GitHub</string>
    <string name="action_menu_facebook">FaceBook</string>
    <string name="action_menu_twitter">Twitter</string>
    <string name="action_menu_line">LINE</string>

    <string name="action_menu_mal">View on MAL</string>
    <string name="action_menu_logout">Keluar</string>
    <string name="action_menu_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Your.Email@domain.id</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_seasonal">Seasonal Anime</string>
    <string name="menu_top">Top Anime</string>
    <string name="menu_about">About</string>

    <string name="seasonal_information">Mengambil Data Dari Server ...</string>
    <string-array name="season_type">
        <item>Winter (Jan-Mar)</item>
        <item>Spring (Apr-Jun)</item>
        <item>Summer (Jul-Sept)</item>
        <item>Fall (Oct-Dec)</item>
    </string-array>
    <string-array name="season_year">
        <item>Later</item>
        <item>2019</item>
        <item>2018</item>
        <item>....</item>
        <item>1917</item>
    </string-array>

    <string name="top_information">Fitur Belum Ada Bro!</string>

</resources>
