<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bgapp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/clover"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rootViewRegisterScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgRegisterScreen"
                        android:layout_width="match_parent"
                        android:layout_height="200sp"
                        app:srcCompat="@drawable/maido" />

                    <TextView
                        android:id="@+id/txtTitleRegisterScreen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textAlignment="center"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin">

                    <TextView
                        android:id="@+id/txtInfoRegisterScreen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/register_info"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txtUserRegisterScreen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txtUser"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:drawableStart="@drawable/ic_account"
                            android:drawablePadding="8dp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txtPassRegisterScreen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txtPassReg"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:drawableStart="@drawable/ic_unlock"
                            android:drawablePadding="8dp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txtRePassRegisterScreen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txtRePassReg"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:drawableStart="@drawable/ic_verify"
                            android:drawablePadding="8dp" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnRegisterRegisterScreen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="16dp"
                            android:text="@string/btnRegister"
                            android:textStyle="bold"
                            style="@style/Widget.MaterialComponents.Button"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btnLoginRegisterScreen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:text="@string/btnLogin"
                            android:textStyle="bold|italic"
                            android:textSize="18sp"
                            android:background="@android:color/transparent"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>