<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bgapp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/clover"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_translucent_padding">

            <ImageView
                android:id="@+id/about_image"
                android:layout_height="256dp"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/maido2" />

            <EditText
                android:id="@+id/about_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:editable="false"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_author"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:textAlignment="textEnd"/>

            <View
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/activity_margin" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/about_library"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:overScrollMode="ifContentScrolls"
                    android:text="@string/about_library_list"
                    android:textSize="14sp"
                    android:textColor="@color/white" />

            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>